--- a/res/css/style.css
+++ b/res/css/style.css
@@ -139,6 +139,18 @@ a {
     align-items: center;
 }
 
+.postText {
+    margin: 1% 5%;
+    text-align: justify;
+}
+
+.postImage {
+    width: 90%;
+    height: auto;
+    margin: 1% 5%;
+    border-radius: .5em;
+}
+
 .postFooter {
     height: 25px;
 }
