--- a/res/css/style.css
+++ b/res/css/style.css
@@ -57,8 +57,8 @@ a {
 #login_container{
     justify-self: center;
     margin-top: 30px;
-    margin-left: .5em;
-    margin-right: .5em;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
     width: 98%;
     max-width: 600px;
