--- a/res/css/style.css
+++ b/res/css/style.css
@@ -263,15 +263,11 @@ a {
 }
   
   
-.choose {
+#choose {
   background-color: grey;
   width: 100%;
   max-width: 120px;
   padding: 6px;
-}
-
-.choose a {
-  color: white;
 }
 
 .create-post-btn {
